--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   },
   "homepage": "https://github.com/hackmdio/themes#readme",
   "devDependencies": {
-    "ts-json-schema-generator": "^1.0.0"
+    "@hackmd/api": "2.2.0",
+    "@types/gulp": "^4.0.9",
+    "@types/node": "^18.6.1",
+    "dotenv": "^16.0.1",
+    "gulp": "^4.0.2",
+    "ts-json-schema-generator": "^1.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
