style: format with prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   "json.schemas": [
     {
-      "fileMatch": [
-        "/src/**/meta.json",
-      ],
+      "fileMatch": ["/src/**/meta.json"],
       "url": "/.vscode/meta.schema.json"
     }
   ],
+  "editor.formatOnSave": true
 }
