--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gen:json-schema": "ts-json-schema-generator --path types/styleMeta.d.ts > .vscode/meta.schema.json"
+    "gen:json-schema": "ts-json-schema-generator --path types/styleMeta.d.ts > .vscode/meta.schema.json",
+    "fmt": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,15 @@
     "@types/node": "^18.6.1",
     "dotenv": "^16.0.1",
     "gulp": "^4.0.2",
+    "prettier": "^2.7.1",
     "ts-json-schema-generator": "^1.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false
   }
 }
