--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   },
   "homepage": "https://github.com/hackmdio/themes#readme",
   "devDependencies": {
-    "@hackmd/api": "2.2.0",
+    "@hackmd/api": "2.2.1",
     "@types/gulp": "^4.0.9",
+    "@types/gulp-sass": "^5.0.0",
     "@types/node": "^18.6.1",
+    "@types/through2": "^2.0.36",
     "dotenv": "^16.0.1",
     "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "prettier": "^2.7.1",
+    "sass": "^1.54.5",
+    "through2": "^4.0.2",
     "ts-json-schema-generator": "^1.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
@@ -34,6 +39,14 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": true,
-    "singleQuote": false
+    "singleQuote": false,
+    "overrides": [
+      {
+        "files": "pnpm-lock.yaml",
+        "options": {
+          "singleQuote": true
+        }
+      }
+    ]
   }
 }
