feat: render theme table

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "moduleResolution": "NodeNext",
     "module": "CommonJS",
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+  },
 }
