--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@types/gulp": "^4.0.9",
     "@types/gulp-sass": "^5.0.0",
     "@types/node": "^18.6.1",
+    "@types/react": "^18.0.17",
     "@types/through2": "^2.0.36",
     "dotenv": "^16.0.1",
+    "fast-glob": "^3.2.11",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
+    "ink": "^3.2.0",
+    "ink-table": "^3.0.0",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
     "sass": "^1.54.5",
     "through2": "^4.0.2",
     "ts-json-schema-generator": "^1.0.0",
