feat: run prettier format

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
     "jsx": "react",
     "moduleResolution": "NodeNext",
     "module": "CommonJS",
-    "esModuleInterop": true,
-  },
+    "esModuleInterop": true
+  }
 }
