--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,14 +11,36 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+
+      - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-          cache: "npm"
-      - run: npm ci
-      - run: npm lint
-      - run: npm run build --if-present
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - run: pnpm lint
+      - run: pnpm run build --if-present
         env:
           HACKMD_ACCESS_TOKEN: ${{ secrets.HACKMD_ACCESS_TOKEN }}
           HACKMD_WORKSPACE_TEAM_PATH: ${{ secrets.HACKMD_WORKSPACE_TEAM_PATH }}
