fix: use env instead of secrets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,5 +42,5 @@ jobs:
       - run: pnpm lint
       - run: pnpm run build --if-present
         env:
-          HACKMD_ACCESS_TOKEN: ${{ secrets.HACKMD_ACCESS_TOKEN }}
-          HACKMD_WORKSPACE_TEAM_PATH: ${{ secrets.HACKMD_WORKSPACE_TEAM_PATH }}
+          HACKMD_ACCESS_TOKEN: ${{ env.HACKMD_ACCESS_TOKEN }}
+          HACKMD_WORKSPACE_TEAM_PATH: ${{ env.HACKMD_WORKSPACE_TEAM_PATH }}
