fix: seperate build env

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -2,13 +2,13 @@ name: Themes Build
 
 on:
   push:
-    branches: ["main"]
+    branches: ["develop"]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: Production
+    environment: Staging
 
     steps:
       - uses: actions/checkout@v3
