--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,4 @@ jobs:
       - run: pnpm run build --if-present
         env:
           HACKMD_ACCESS_TOKEN: ${{ secrets.HACKMD_ACCESS_TOKEN }}
-          HACKMD_WORKSPACE_TEAM_PATH: ${{ secrets.HACKMD_WORKSPACE_TEAM_PATH }}
+          HACKMD_WORKSPACE_TEAM_PATH: themes
